@@ -3,7 +3,7 @@
 <p align="center"> 🧘 Simple, fast and versatile Datalog database for everyone 💽 </p>
 <p align="center">
 <a href="https://clojars.org/datalevin"><img src="https://img.shields.io/clojars/v/datalevin.svg?color=success" alt="datalevin on clojars"></img></a>
-<a href="https://github.com/juji-io/datalevin/actions"><img src="https://github.com/juji-io/datalevin/actions/workflows/release.binaries.yml/badge.svg?branch=0.6.12" alt="datalevin linux/macos build status"></img></a>
+<a href="https://github.com/juji-io/datalevin/actions"><img src="https://github.com/juji-io/datalevin/actions/workflows/release.binaries.yml/badge.svg?branch=0.6.13" alt="datalevin linux/macos build status"></img></a>
 <a href="https://ci.appveyor.com/project/huahaiy/datalevin"><img src="https://ci.appveyor.com/api/projects/status/github/juji-io/datalevin?svg=true" alt="datalevin windows build status"></img></a>
 
 </p>
@@ -101,18 +101,18 @@ If you use [Leiningen](https://leiningen.org/) build tool, add this to the
 `:dependencies` section of your `project.clj` file:
 
 ```Clojure
-[datalevin "0.6.12"]
+[datalevin "0.6.13"]
 ```
 
 If you use [Clojure CLI](https://clojure.org/guides/deps_and_cli) and
 `deps.edn`, declare the dependency like so:
 
 ```Clojure
-{:deps {datalevin/datalevin {:mvn/version "0.6.12"}
+{:deps {datalevin/datalevin {:mvn/version "0.6.13"}
         com.cognitect/transit-clj {:mvn/version "1.0.329"}}}
 ```
 
-This JVM library supports Java 8 and above. For JVM version newer than 11, you may want to add the following JVM options:
+This JVM library supports Java 8 and above. For **JVM version newer than 11**, you may want to add the following JVM options:
 ```
 --add-opens=java.base/java.nio=ALL-UNNAMED
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
@@ -145,7 +145,7 @@ code works in both Datalevin library and Datalevin command line tool.
 
 A native Datalevin is built by compiling into [GraalVM native
 image](https://www.graalvm.org/reference-manual/native-image/). In addition to
-fast startup times, it should also have better database performance, for the
+fast startup times, it should also have better index access speed, for the
 native image version does not incur JNI overhead and uses a comparator written
 in C, see [blog
 post](https://yyhh.org/blog/2021/02/writing-c-code-in-javaclojure-graalvm-specific-programming/).
@@ -185,16 +185,16 @@ See [README on Docker hub](https://hub.docker.com/r/huahaiy/datalevin) for usage
 
 Or download the executable binary from github:
 
-* [Linux](https://github.com/juji-io/datalevin/releases/download/0.6.12/dtlv-0.6.12-ubuntu-latest-amd64.zip)
+* [Linux](https://github.com/juji-io/datalevin/releases/download/0.6.13/dtlv-0.6.13-ubuntu-latest-amd64.zip)
   on x86-64 (AMD64)
-* [MacOS](https://github.com/juji-io/datalevin/releases/download/0.6.12/dtlv-0.6.12-macos-latest-amd64.zip)
+* [MacOS](https://github.com/juji-io/datalevin/releases/download/0.6.13/dtlv-0.6.13-macos-latest-amd64.zip)
   on x86-64 (AMD64)
-* [Windows](https://github.com/juji-io/datalevin/releases/download/0.6.12/dtlv-0.6.12-windows-amd64.zip) on x86-64 (AMD64)
+* [Windows](https://github.com/juji-io/datalevin/releases/download/0.6.13/dtlv-0.6.13-windows-amd64.zip) on x86-64 (AMD64)
 
 Unzip, put it on your path, and execute `dtlv help`:
 
 ```console
-  Datalevin (version: 0.6.12)
+  Datalevin (version: 0.6.13)
 
 Usage: dtlv [options] [command] [arguments]
 
@@ -231,7 +231,7 @@ Type 'dtlv help <command>' to read about a specific command.
 Starting `dtlv` without any arguments goes into the console:
 
 ```console
-  Datalevin (version: 0.6.12)
+  Datalevin (version: 0.6.13)
 
   Type (help) to see available functions. Some Clojure core functions are also available.
   Type (exit) to exit.
@@ -290,14 +290,23 @@ You may want to launch `dtlv` in `rlwrap` to get a better REPL experience.
 #### Uberjar
 
 A JVM
-[uberjar](https://github.com/juji-io/datalevin/releases/download/0.6.12/datalevin-0.6.12-standalone.jar)
-is downloadable to use as the command line tool, in case a pre-built native
-version is not available for your platform. For example,
+[uberjar](https://github.com/juji-io/datalevin/releases/download/0.6.13/datalevin-0.6.13-standalone.jar)
+is downloadable to use as the command line tool. It is useful when one wants to
+run a Datalevin server and needs the efficiency of JVM's JIT, as GraalVM native
+image is AOT and not as efficient as JVM for long running programs, or when a
+pre-built native version is not available for your platform. For example,
+assuming your Java is newer than version 11:
 
 ```console
-java -jar datalevin-0.6.12-standalone.jar
+java --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -jar datalevin-0.6.13-standalone.jar
 ```
 This will start the Datalevin REPL.
+
+```console
+java --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -jar datalevin-0.6.13-standalone.jar serv -r /tmp/test-server
+```
+Will run the Datalevin server on default port 8898, with root data path at
+`/tmp/test-server`.
 
 ### Babashka Pod
 
